style.css
* {
    box-sizing: border-box;
}    

a {
    font-size: 18px;
    font-weight: lighter;
    text-decoration: none;
    text-shadow: 3px 1px 1px black;
    color: white;
    text-transform: lowercase;
}

a:hover {
    color: forestgreen;
}

a,
footer,
p {
    font-family: 'Dosis', sans-serif;
}

body {
    display: flex;
    flex-direction: column;
    min-height: 100vh;

    background-image: url("./images/dynamic-style.png"); /* one dot means in same folder */

    overflow-x: hidden;
}

body,
html {
    margin: 0;
}

button {
    color: white;
    font-family: 'Cinzel', serif;
    font-weight: bold;
    font-size: 20px;
    width: 100%;

    background-color: transparent;
    border: none;
  }

.button-container {
    width: 50%;
    height: 100px;
    text-align: center;
    margin: auto;
}

.button-h {
    margin: 10px;
    padding: 5px;
    background: grey;
    text-shadow: 1px 1px 1px black;
}

.container {
    margin: 0;
}

.div-content {
    margin: 0;
}

fieldset {
    display: flex;
    align-content: center;
    margin: auto;
}

footer {
    color: white;
    letter-spacing: 1px;
    text-align: center;
    background: rgb(78, 78, 78);
    padding: 4px;
    height: 30px;
}

.form-div {
    width: 90%;
    display: flex;
    justify-content: center;
    flex-direction: column;
    margin: 0 20px;
}

.front-img {
    width: 100%;
    height: auto;
    opacity: .5;
    }

h1,
h2,
h3 {
    font-family: 'Cinzel', serif;
    text-align: center;
}

h1 {
    color: white;
    font-size: 40px;
    font-weight: lighter;
    letter-spacing: 3px;
    text-shadow: 1px 1px 1px black;
    background: grey;
}

h2
 {
    font-size: 20px;
    text-shadow: 1px 1px 1px grey;
    padding: 20px;
}

/*creates lines before and after h2*/

h2:before, 
h2:after {
  content: "";
  display: inline-block;
  width: 20%;
  margin: 0 .5em 0 -55%;
  vertical-align: middle;
  border-bottom: 1px solid;
}

h2:after {
  margin: 0 -55% 0 .5em;
}

/*end*/

h3 {
    font-size: 20px;
}

header {
    width: 100%;
    height: 10%;
}

html {
    width: 100vw;
    height: 100vh;
    
}

.img_container {
    justify-content: center;
    background: white;
    width: 100%;
    height: auto;

}



legend {
    text-align: center;
}

li {
    font-size: 20px;
    letter-spacing: 1px;
}

.main-content {
    width: 100%;;
}

nav {
    position: fixed;
    width: 100%;
    margin: 0;
}

p {
    font-size: 20px;
    font-weight: lighter;
    text-align: justify;
    letter-spacing: 1px;
    line-height: 2em;
    margin: 0;
    padding: 20px;
}

.p_content {
    margin: 0;
    text-align: justify;
}

ul {
    display: flex;
    justify-content: space-around;

    background: rgb(78, 78, 78);
    list-style-type: none; /* gets rid of bullets */
    margin: 0;
    padding: 5px;
}

/*

|| Media Queries ||

*/

@media screen and (max-width: 799px) {

    .front-img {
        
    }



}

@media (min-width: 800px){

    .container {
        display: flex;
        flex-direction: row-reverse;
        justify-content: center;
        margin: 0;
        padding: 0;
    }

    .div-content {
        width: 60%;
        margin-top: 0;
    }

    footer {
        text-align: center;
        background: slategrey;
        margin: 0;
        padding: 10px;
        height: 30px;
    }

    .form-div {
        margin: 0 25%;
    }

    h1 {
        margin: 0;
        padding: 50px;
        height: 40%;
    }

    h1:before,
    h1:after {

        content: "";
        display: inline-block;
        width: 20%;
        margin: 0 .5em 0 -55%;
        vertical-align: middle;
        border-bottom: 1px solid;
    }

    h1:after {
        margin: 0 -55% 0 .5em;
    }

    h2 {
        font-size: 25px;
        margin-top: 20px;
        margin-bottom: 20px;
        padding-top: 20px;
        padding-bottom: 10px;
    }

    .img_container {
        flex-grow: 2;
        width: 35%;
        padding: 0;
    }

    legend {
        text-align: left;
    }

    .main-content {
        align-self: center;
    }

    p {
        letter-spacing: 2px;
    }

    .p_content {
        font-size: 25px;
        margin-top: 20px;
        margin-bottom: 40px;
        padding: 0 30px;
    }
}

